--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,7 @@
         <h2 class="text-3xl font-bold text-gray-800 text-center mb-12">Featured Works</h2>
         <div class="grid grid-cols-1 md:grid-cols-2  lg:grid-cols-3 gap-12">
           <div class="featured-product-card border border-gray-300 rounded-lg overflow-hidden hover:shadow-lg transition duration-300 ease-in-out">
-            <img src="https://github.com/shivenducs1136/sample/blob/master/resources/paypaldp.jpg" alt="Product Image" class="w-full h-64 object-cover">
+            <img src="https://raw.githubusercontent.com/shivenducs1136/sample/master/resources/paypaldp.jpg" alt="Product Image" class="w-full h-64 object-cover">
             <div class="p-6">
               <h3 class="font-bold text-gray-800 text-xl mb-2">Jaehoppe Latest sketches</h3>
               <p class="text-gray-700 text-base mb-4">Create your own similar sketches and get it delivered at your doorstep.  Now!</p>
