--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -5,22 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>About Us | Company Name</title>
+    <title>About Us | PurpleArtWorld</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css">
 </head>
 
-<body class="bg-gray-100">
+<body class="bg-purple-100">
 
     <!-- Set up navigation bar -->
-    <nav class="bg-gray-800 text-gray-100 py-4">
+    <nav class="bg-purple-800 text-purple-100 py-4">
         <div class="container mx-auto flex items-center justify-between">
-            <h1 class="text-xl font-bold"><a href="/">Company Name</a></h1>
-            <ul class="flex items-center">
-                <li class="mr-6"><a href="/">Home</a></li>
-                <li class="mr-6"><a href="/products">Products</a></li>
-                <li class="mr-6"><a href="/about">About Us</a></li>
-                <li><a href="/contact">Contact Us</a></li>
-            </ul>
+            <h1 class="text-xl font-bold"><a href="/">PurpleArtWorld</a></h1>
+         
         </div>
     </nav>
 
@@ -28,44 +23,20 @@
     <section class="py-20">
         <div class="container mx-auto">
             <h2 class="text-4xl font-bold mb-4">About Us</h2>
-            <p class="text-gray-600 leading-loose mb-8">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
-                finibus lectus sed nibh feugiat, nec convallis mauris iaculis. Suspendisse ac est ligula. Sed in
-                malesuada justo. Nunc posuere varius malesuada. Integer ac ligula sit amet massa consequat sagittis
-                vitae vel orci.</p>
-            <p class="text-gray-600 leading-loose mb-8">Morbi congue quam id eros consectetur faucibus. Suspendisse quis
-                lectus euismod, tempor lacus a, posuere sapien. Curabitur quis velit eget velit pulvinar ullamcorper.
-                Etiam in nibh ac enim tincidunt luctus. Sed vel ante eget nunc suscipit pretium. Vivamus varius posuere
-                metus, sit amet convallis leo facilisis ut.</p>
-            <p class="text-gray-600 leading-loose">Nullam hendrerit arcu sed tellus porttitor, quis eleifend eros
-                aliquet. Nullam interdum faucibus quam sed dignissim. Integer nec sapien in nisi convallis efficitur.
-                Suspendisse maximus sapien velit, ac vestibulum leo bibendum ut. Integer non dui nec nibh consequat
-                auctor in vitae nisl.</p>
+            <p class="text-gray-600 leading-loose mb-8">Hi, I am Shivangi Mishra a teenager from Prayagraj previously known as Allahabad. Professionally I'm a Law student as well as a Freelance Artist.</p>
+            <p class="text-gray-600 leading-loose mb-8">All of the artwork on my Instagram & website PurpleArtWorld are completely made by me. It takes more than 4 Hours of continuous effort to draw just a small piece of artwork.</p>
+            <p class="text-gray-600 leading-loose">I'm able to draw any of your sketches, and for you complete satisfaction I'll take 100% fees only after you approve the art work. You can use these artwork for making NFTs as well you can purchase the copyrights and make your NFTs visible to everyone.</p>
         </div>
     </section>
 
     <!-- Set up footer section -->
-    <footer class="bg-gray-800 text-gray-100 py-10">
+    <footer class="bg-purple-800 text-purple-100 py-10">
         <div class="container mx-auto">
             <div class="flex flex-col md:flex-row items-center justify-between">
                 <div class="mb-4 md:mb-0">
-                    <h3 class="text-lg font-bold mb-2">Company Name</h3>
-                    <p class="text-gray-400 text-base">123 Main Street, City, State, ZIP Code</p>
+                    <h3 class="text-lg font-bold mb-2">PurpleArtWorld</h3>
                 </div>
-                <div class="flex items-center">
-                    <a href="/" class="text-gray-400 hover:text
-            gray-100 mx-4">Home</a>
-                    <a href="/products" class="text-gray-400 hover:text-gray-100 mx-4">Products</a>
-                    <a href="/about" class="text-gray-400 hover:text-gray-100 mx-4">About Us</a>
-                    <a href="/contact" class="text-gray-400 hover:text-gray-100 mx-4">Contact Us</a>
-                </div>
-                <div>
-                    <p class="text-gray-400">Connect with us:</p>
-                    <div class="flex items-center mt-2">
-                        <a href="#" class="text-gray-400 hover:text-gray-100 mx-2"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-gray-100 mx-2"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-gray-100 mx-2"><i class="fab fa-instagram"></i></a>
-                    </div>
-                </div>
+              
             </div>
         </div>
     </footer>
