--- a/html/index.html
+++ b/html/index.html
@@ -70,7 +70,7 @@
             </div>
           </div>
           <div class="featured-product-card border border-purple-300 max-w-sm rounded-lg overflow-hidden hover:shadow-lg transition duration-300 ease-in-out">
-            <video src="../resources/video1.mp4" controls>
+            <video src="https://raw.githubusercontent.com/shivenducs1136/sample/master/resources/video1.mp4" controls>
               Your browser does not support the video tag.
             </video>
             <div class="p-6">
@@ -78,7 +78,7 @@
             </div>
           </div>
           <div class="featured-product-card border border-purple-300 max-w-sm rounded-lg overflow-hidden hover:shadow-lg transition duration-300 ease-in-out">
-            <video src="../resources/video2.mp4" height="200" controls>
+            <video src="https://raw.githubusercontent.com/shivenducs1136/sample/master/resources/video2.mp4" height="200" controls>
               Your browser does not support the video tag.
             </video>
             <div class="p-6">
@@ -87,25 +87,25 @@
           </div>
        
           <div class="featured-product-card border border-purple-300 max-w-sm rounded-lg overflow-hidden hover:shadow-lg transition duration-300 ease-in-out">
-            <img src="../resources/jimin.jpg" alt="Product Image" class="w-full h-auto object-cover">
+            <img src="https://raw.githubusercontent.com/shivenducs1136/sample/master/resources/jimin.jpg" alt="Product Image" class="w-full h-auto object-cover">
             <div class="p-6">
               <h3 class="font-bold text-purple-800 text-xl mb-2">Jimin Portrait</h3>
             </div>
           </div>
           <div class="featured-product-card border border-purple-300 max-w-sm rounded-lg overflow-hidden hover:shadow-lg transition duration-300 ease-in-out">
-            <img src="../resources/jungkookimg.jpg" alt="Product Image" class="w-full h-auto object-cover">
+            <img src="https://raw.githubusercontent.com/shivenducs1136/sample/master/resources/jungkookimg.jpg" alt="Product Image" class="w-full h-auto object-cover">
             <div class="p-6">
               <h3 class="font-bold text-purple-800 text-xl mb-2">Jungkook Portrait</h3>
             </div>
           </div>
           <div class="featured-product-card border border-purple-300 max-w-sm rounded-lg overflow-hidden hover:shadow-lg transition duration-300 ease-in-out">
-            <img src="../resources/rose.jpg" alt="Product Image" class="w-full h-auto object-cover">
+            <img src="https://raw.githubusercontent.com/shivenducs1136/sample/master/resources/rose.jpg" alt="Product Image" class="w-full h-auto object-cover">
             <div class="p-6">
               <h3 class="font-bold text-purple-800 text-xl mb-2">Rose Portrait</h3>
             </div>
           </div>
           <div class="featured-product-card border border-purple-300 max-w-sm rounded-lg overflow-hidden hover:shadow-lg transition duration-300 ease-in-out">
-            <video src="../resources/jhopevideo.mp4" height="200" controls>
+            <video src="https://raw.githubusercontent.com/shivenducs1136/sample/master/resources/jhopevideo.mp4" height="200" controls>
               Your browser does not support the video tag.
             </video>
             <div class="p-6">
@@ -113,19 +113,19 @@
             </div>
           </div>
           <div class="featured-product-card border border-purple-300 max-w-sm rounded-lg overflow-hidden hover:shadow-lg transition duration-300 ease-in-out">
-            <img src="../resources/jisoo.jpg" alt="Product Image" class="w-full h-auto object-cover">
+            <img src="https://raw.githubusercontent.com/shivenducs1136/sample/master/resources/jisoo.jpg" alt="Product Image" class="w-full h-auto object-cover">
             <div class="p-6">
               <h3 class="font-bold text-purple-800 text-xl mb-2">Jisoo Portrait</h3>
             </div>
           </div>
           <div class="featured-product-card border border-purple-300 max-w-sm rounded-lg overflow-hidden hover:shadow-lg transition duration-300 ease-in-out">
-            <img src="../resources/arianagrande.jpg" alt="Product Image" class="w-full h-auto object-cover">
+            <img src="https://raw.githubusercontent.com/shivenducs1136/sample/master/resources/arianagrande.jpg" alt="Product Image" class="w-full h-auto object-cover">
             <div class="p-6">
               <h3 class="font-bold text-purple-800 text-xl mb-2">Arina Grande Portrait</h3>
             </div>
           </div>
           <div class="featured-product-card border border-purple-300 max-w-sm rounded-lg overflow-hidden hover:shadow-lg transition duration-300 ease-in-out">
-            <img src="../resources/v.jpg" alt="Product Image" class="w-full h-auto object-cover">
+            <img src="https://raw.githubusercontent.com/shivenducs1136/sample/master/resources/v.jpg" alt="Product Image" class="w-full h-auto object-cover">
             <div class="p-6">
               <h3 class="font-bold text-purple-800 text-xl mb-2">Arina Grande Portrait</h3>
             </div>
